--- a/ClientApp/src/app/administrativo/pages/buscar-paciente/buscar-paciente.component.html
+++ b/ClientApp/src/app/administrativo/pages/buscar-paciente/buscar-paciente.component.html
@@ -16,16 +16,16 @@
   <div *ngIf="pacientesEncontrados.length > 0" class="resultados">
     <h3>Información del Paciente</h3>
     <div *ngFor="let paciente of pacientesEncontrados" class="paciente-info">
-      <p><strong>Nombre:</strong> {{ paciente.nombre }}</p>
-      <p><strong>Edad:</strong> {{ paciente.edad }}</p>
-      <p><strong>Fecha de Nacimiento:</strong> {{ paciente.fechaNacimiento | date: 'dd/MM/yyyy' }}</p>
-      <p><strong>Síntomas:</strong> {{ paciente.sintomas }}</p>
-      <p><strong>Estado:</strong> {{ paciente.estado }}</p>
-      <p><strong>Seguridad Social:</strong> {{ paciente.seguridadSocial }}</p>
-      <p><strong>Dirección:</strong> {{ paciente.direccion }}</p>
-      <p><strong>Teléfono:</strong> {{ paciente.telefono }}</p>
-      <p><strong>Email:</strong> {{ paciente.email }}</p>
-      <p><strong>Historial Médico:</strong> {{ paciente.historialMedico }}</p>
+      <p><strong>Nombre:</strong> {{ paciente.Nombre }}</p>
+      <p><strong>Edad:</strong> {{ paciente.Edad }}</p>
+      <p><strong>Fecha de Nacimiento:</strong> {{ paciente.FechaNacimiento | date: 'dd/MM/yyyy' }}</p>
+      <p><strong>Síntomas:</strong> {{ paciente.Sintomas }}</p>
+      <p><strong>Estado:</strong> {{ paciente.Estado }}</p>
+      <p><strong>Seguridad Social:</strong> {{ paciente.SeguridadSocial }}</p>
+      <p><strong>Dirección:</strong> {{ paciente.Direccion }}</p>
+      <p><strong>Teléfono:</strong> {{ paciente.Telefono }}</p>
+      <p><strong>Email:</strong> {{ paciente.Email }}</p>
+      <p><strong>Historial Médico:</strong> {{ paciente.HistorialMedico }}</p>
     </div>
   </div>
 </div>
