--- a/ClientApp/src/app/shared/pacientes/pacientes.component.html
+++ b/ClientApp/src/app/shared/pacientes/pacientes.component.html
@@ -10,38 +10,38 @@
     <table class="table">
       <thead>
         <tr>
-          <th (click)="ordenar('idPaciente')">ID Paciente <span *ngIf="columnaOrdenada === 'idPaciente'">{{ orden === 'asc' ? '▲' : '▼' }}</span></th>
-          <th (click)="ordenar('nombre')">Nombre <span *ngIf="columnaOrdenada === 'nombre'">{{ orden === 'asc' ? '▲' : '▼' }}</span></th>
-          <th (click)="ordenar('edad')">Edad <span *ngIf="columnaOrdenada === 'edad'">{{ orden === 'asc' ? '▲' : '▼' }}</span></th>
-          <th (click)="ordenar('fechaNacimiento')">Fecha de Nacimiento <span *ngIf="columnaOrdenada === 'fechaNacimiento'">{{ orden === 'asc' ? '▲' : '▼' }}</span></th>
-          <th (click)="ordenar('sintomas')">Síntomas <span *ngIf="columnaOrdenada === 'sintomas'">{{ orden === 'asc' ? '▲' : '▼' }}</span></th>
-          <th (click)="ordenar('estado')">Estado <span *ngIf="columnaOrdenada === 'estado'">{{ orden === 'asc' ? '▲' : '▼' }}</span></th>
-          <th (click)="ordenar('fechaRegistro')">Fecha de Registro <span *ngIf="columnaOrdenada === 'fechaRegistro'">{{ orden === 'asc' ? '▲' : '▼' }}</span></th>
-          <th (click)="ordenar('seguridadSocial')">Seguridad Social <span *ngIf="columnaOrdenada === 'seguridadSocial'">{{ orden === 'asc' ? '▲' : '▼' }}</span></th>
-          <th (click)="ordenar('direccion')">Dirección <span *ngIf="columnaOrdenada === 'direccion'">{{ orden === 'asc' ? '▲' : '▼' }}</span></th>
-          <th (click)="ordenar('telefono')">Teléfono <span *ngIf="columnaOrdenada === 'telefono'">{{ orden === 'asc' ? '▲' : '▼' }}</span></th>
-          <th (click)="ordenar('email')">Email <span *ngIf="columnaOrdenada === 'email'">{{ orden === 'asc' ? '▲' : '▼' }}</span></th>
-          <th (click)="ordenar('historialMedico')">Historial Médico <span *ngIf="columnaOrdenada === 'historialMedico'">{{ orden === 'asc' ? '▲' : '▼' }}</span></th>
+          <th (click)="ordenar('IdPaciente')">ID Paciente <span *ngIf="columnaOrdenada === 'IdPaciente'">{{ orden === 'asc' ? '▲' : '▼' }}</span></th>
+          <th (click)="ordenar('Nombre')">Nombre <span *ngIf="columnaOrdenada === 'Nombre'">{{ orden === 'asc' ? '▲' : '▼' }}</span></th>
+          <th (click)="ordenar('Edad')">Edad <span *ngIf="columnaOrdenada === 'Edad'">{{ orden === 'asc' ? '▲' : '▼' }}</span></th>
+          <th (click)="ordenar('FechaNacimiento')">Fecha de Nacimiento <span *ngIf="columnaOrdenada === 'FechaNacimiento'">{{ orden === 'asc' ? '▲' : '▼' }}</span></th>
+          <th (click)="ordenar('Sintomas')">Síntomas <span *ngIf="columnaOrdenada === 'Sintomas'">{{ orden === 'asc' ? '▲' : '▼' }}</span></th>
+          <th (click)="ordenar('Estado')">Estado <span *ngIf="columnaOrdenada === 'Estado'">{{ orden === 'asc' ? '▲' : '▼' }}</span></th>
+          <th (click)="ordenar('FechaRegistro')">Fecha de Registro <span *ngIf="columnaOrdenada === 'FechaRegistro'">{{ orden === 'asc' ? '▲' : '▼' }}</span></th>
+          <th (click)="ordenar('SeguridadSocial')">Seguridad Social <span *ngIf="columnaOrdenada === 'SeguridadSocial'">{{ orden === 'asc' ? '▲' : '▼' }}</span></th>
+          <th (click)="ordenar('Direccion')">Dirección <span *ngIf="columnaOrdenada === 'Direccion'">{{ orden === 'asc' ? '▲' : '▼' }}</span></th>
+          <th (click)="ordenar('Telefono')">Teléfono <span *ngIf="columnaOrdenada === 'Telefono'">{{ orden === 'asc' ? '▲' : '▼' }}</span></th>
+          <th (click)="ordenar('Email')">Email <span *ngIf="columnaOrdenada === 'Email'">{{ orden === 'asc' ? '▲' : '▼' }}</span></th>
+          <th (click)="ordenar('HistorialMedico')">Historial Médico <span *ngIf="columnaOrdenada === 'HistorialMedico'">{{ orden === 'asc' ? '▲' : '▼' }}</span></th>
           <th>Acciones</th>
         </tr>
       </thead>
       <tbody>
         <tr *ngFor="let paciente of pacientesPaginados">
-          <td>{{ paciente.idPaciente }}</td>
-          <td>{{ paciente.nombre }}</td>
-          <td>{{ paciente.edad }}</td>
-          <td>{{ paciente.fechaNacimiento | date:'dd/MM/yyyy' }}</td>
-          <td>{{ paciente.sintomas }}</td>
-          <td>{{ paciente.estado }}</td>
-          <td>{{ paciente.fechaRegistro | date:'dd/MM/yyyy HH:mm\'h\'' }}</td>
-          <td>{{ paciente.seguridadSocial }}</td>
-          <td>{{ paciente.direccion }}</td>
-          <td>{{ paciente.telefono }}</td>
-          <td>{{ paciente.email }}</td>
-          <td>{{ paciente.historialMedico }}</td>
+          <td>{{ paciente.IdPaciente }}</td>
+          <td>{{ paciente.Nombre }}</td>
+          <td>{{ paciente.Edad }}</td>
+          <td>{{ paciente.FechaNacimiento | date:'dd/MM/yyyy' }}</td>
+          <td>{{ paciente.Sintomas }}</td>
+          <td>{{ paciente.Estado }}</td>
+          <td>{{ paciente.FechaRegistro | date:'dd/MM/yyyy HH:mm\'h\'' }}</td>
+          <td>{{ paciente.SeguridadSocial }}</td>
+          <td>{{ paciente.Direccion }}</td>
+          <td>{{ paciente.Telefono }}</td>
+          <td>{{ paciente.Email }}</td>
+          <td>{{ paciente.HistorialMedico }}</td>
           <td>
             <button (click)="toggleActualizarPaciente(paciente)">Actualizar</button>
-            <button (click)="borrarPaciente(paciente.idPaciente)">Borrar</button>
+            <button (click)="borrarPaciente(paciente.IdPaciente)">Borrar</button>
           </td>
         </tr>
       </tbody>
@@ -60,29 +60,29 @@
     <h3>Actualizar Paciente</h3>
     <form (ngSubmit)="actualizarPaciente()">
       <label for="idPaciente">ID Paciente:</label>
-      <input type="number" id="idPaciente" [(ngModel)]="pacienteParaActualizar.idPaciente" name="idPaciente" disabled>
+      <input type="number" id="idPaciente" [(ngModel)]="pacienteParaActualizar.IdPaciente" name="idPaciente" disabled>
       <label for="nombre">Nombre:</label>
-      <input type="text" id="nombre" [(ngModel)]="pacienteParaActualizar.nombre" name="nombre">
+      <input type="text" id="nombre" [(ngModel)]="pacienteParaActualizar.Nombre" name="nombre">
       <label for="edad">Edad:</label>
-      <input type="number" id="edad" [(ngModel)]="pacienteParaActualizar.edad" name="edad">
+      <input type="number" id="edad" [(ngModel)]="pacienteParaActualizar.Edad" name="edad">
       <label for="fechaNacimiento">Fecha de Nacimiento:</label>
-      <input type="date" id="fechaNacimiento" [(ngModel)]="pacienteParaActualizar.fechaNacimiento" name="fechaNacimiento">
+      <input type="date" id="fechaNacimiento" [(ngModel)]="pacienteParaActualizar.FechaNacimiento" name="fechaNacimiento">
       <label for="sintomas">Síntomas:</label>
-      <input type="text" id="sintomas" [(ngModel)]="pacienteParaActualizar.sintomas" name="sintomas">
+      <input type="text" id="sintomas" [(ngModel)]="pacienteParaActualizar.Sintomas" name="sintomas">
       <label for="estado">Estado:</label>
-      <input type="text" id="estado" [(ngModel)]="pacienteParaActualizar.estado" name="estado">
+      <input type="text" id="estado" [(ngModel)]="pacienteParaActualizar.Estado" name="estado">
       <label for="fechaRegistro">Fecha de Registro:</label>
-      <input type="date" id="fechaRegistro" [(ngModel)]="pacienteParaActualizar.fechaRegistro" name="fechaRegistro">
+      <input type="date" id="fechaRegistro" [(ngModel)]="pacienteParaActualizar.FechaRegistro" name="fechaRegistro">
       <label for="seguridadSocial">Seguridad Social:</label>
-      <input type="text" id="seguridadSocial" [(ngModel)]="pacienteParaActualizar.seguridadSocial" name="seguridadSocial">
+      <input type="text" id="seguridadSocial" [(ngModel)]="pacienteParaActualizar.SeguridadSocial" name="seguridadSocial">
       <label for="direccion">Dirección:</label>
-      <input type="text" id="direccion" [(ngModel)]="pacienteParaActualizar.direccion" name="direccion">
+      <input type="text" id="direccion" [(ngModel)]="pacienteParaActualizar.Direccion" name="direccion">
       <label for="telefono">Teléfono:</label>
-      <input type="text" id="telefono" [(ngModel)]="pacienteParaActualizar.telefono" name="telefono">
+      <input type="text" id="telefono" [(ngModel)]="pacienteParaActualizar.Telefono" name="telefono">
       <label for="email">Email:</label>
-      <input type="email" id="email" [(ngModel)]="pacienteParaActualizar.email" name="email">
+      <input type="email" id="email" [(ngModel)]="pacienteParaActualizar.Email" name="email">
       <label for="historialMedico">Historial Médico:</label>
-      <input type="text" id="historialMedico" [(ngModel)]="pacienteParaActualizar.historialMedico" name="historialMedico">
+      <input type="text" id="historialMedico" [(ngModel)]="pacienteParaActualizar.HistorialMedico" name="historialMedico">
       <button type="submit">Guardar</button>
     </form>
   </div>
@@ -91,27 +91,27 @@
     <h3>Agregar Paciente</h3>
     <form (ngSubmit)="agregarPaciente()">
       <label for="nombre">Nombre:</label>
-      <input type="text" id="nombre" [(ngModel)]="nuevoPaciente.nombre" name="nombre">
+      <input type="text" id="nombre" [(ngModel)]="nuevoPaciente.Nombre" name="nombre">
       <label for="edad">Edad:</label>
-      <input type="number" id="edad" [(ngModel)]="nuevoPaciente.edad" name="edad">
+      <input type="number" id="edad" [(ngModel)]="nuevoPaciente.Edad" name="edad">
       <label for="fechaNacimiento">Fecha de Nacimiento:</label>
-      <input type="date" id="fechaNacimiento" [(ngModel)]="nuevoPaciente.fechaNacimiento" name="fechaNacimiento">
+      <input type="date" id="fechaNacimiento" [(ngModel)]="nuevoPaciente.FechaNacimiento" name="fechaNacimiento">
       <label for="sintomas">Síntomas:</label>
-      <input type="text" id="sintomas" [(ngModel)]="nuevoPaciente.sintomas" name="sintomas">
+      <input type="text" id="sintomas" [(ngModel)]="nuevoPaciente.Sintomas" name="sintomas">
       <label for="estado">Estado:</label>
-      <input type="text" id="estado" [(ngModel)]="nuevoPaciente.estado" name="estado">
+      <input type="text" id="estado" [(ngModel)]="nuevoPaciente.Estado" name="estado">
       <label for="fechaRegistro">Fecha de Registro:</label>
-      <input type="text" id="fechaRegistro" [(ngModel)]="nuevoPaciente.fechaRegistro" name="fechaRegistro">
+      <input type="text" id="fechaRegistro" [(ngModel)]="nuevoPaciente.FechaRegistro" name="fechaRegistro">
       <label for="seguridadSocial">Seguridad Social:</label>
-      <input type="text" id="seguridadSocial" [(ngModel)]="nuevoPaciente.seguridadSocial" name="seguridadSocial">
+      <input type="text" id="seguridadSocial" [(ngModel)]="nuevoPaciente.SeguridadSocial" name="seguridadSocial">
       <label for="direccion">Dirección:</label>
-      <input type="text" id="direccion" [(ngModel)]="nuevoPaciente.direccion" name="direccion">
+      <input type="text" id="direccion" [(ngModel)]="nuevoPaciente.Direccion" name="direccion">
       <label for="telefono">Teléfono:</label>
-      <input type="text" id="telefono" [(ngModel)]="nuevoPaciente.telefono" name="telefono">
+      <input type="text" id="telefono" [(ngModel)]="nuevoPaciente.Telefono" name="telefono">
       <label for="email">Email:</label>
-      <input type="email" id="email" [(ngModel)]="nuevoPaciente.email" name="email">
+      <input type="email" id="email" [(ngModel)]="nuevoPaciente.Email" name="email">
       <label for="historialMedico">Historial Médico:</label>
-      <input type="text" id="historialMedico" [(ngModel)]="nuevoPaciente.historialMedico" name="historialMedico">
+      <input type="text" id="historialMedico" [(ngModel)]="nuevoPaciente.HistorialMedico" name="historialMedico">
       <button type="submit">Agregar</button>
     </form>
   </div>
