--- a/ClientApp/src/app/shared/usuarios/usuarios.component.html
+++ b/ClientApp/src/app/shared/usuarios/usuarios.component.html
@@ -14,21 +14,21 @@
       </thead>
       <tbody>
         <tr *ngFor="let usuario of usuarios">
-          <td>{{ usuario.idUsuario }}</td>
-          <td>{{ usuario.nombre }}</td>
-          <td>{{ usuario.nombreUsuario }}</td>
+          <td>{{ usuario.IdUsuario }}</td>
+          <td>{{ usuario.Nombre }}</td>
+          <td>{{ usuario.NombreUsuario }}</td>
           <td>
-            <span [ngClass]="{ 'hidden-text': !mostrarContrasenas[usuario.idUsuario] }">
-              {{ usuario.contrasenya }}
+            <span [ngClass]="{ 'hidden-text': !mostrarContrasenas[usuario.IdUsuario] }">
+              {{ usuario.Contrasenya }}
             </span>
-            <button class="password" (mousedown)="mostrarContrasena(usuario.idUsuario)" (mouseup)="ocultarContrasena(usuario.idUsuario)" (mouseleave)="ocultarContrasena(usuario.idUsuario)">
+            <button class="password" (mousedown)="mostrarContrasena(usuario.IdUsuario)" (mouseup)="ocultarContrasena(usuario.IdUsuario)" (mouseleave)="ocultarContrasena(usuario.IdUsuario)">
               👁️
             </button>
           </td>
-          <td>{{ usuario.idRol }}</td>
+          <td>{{ usuario.IdRol }}</td>
           <td>
             <button (click)="toggleActualizarUsuario(usuario)">Actualizar</button>
-            <button (click)="borrarUsuario(usuario.idUsuario)">Borrar</button>
+            <button (click)="borrarUsuario(usuario.IdUsuario)">Borrar</button>
           </td>
         </tr>
       </tbody>
@@ -39,15 +39,15 @@
     <h3>Actualizar Usuario</h3>
     <form (ngSubmit)="actualizarUsuario()">
       <label for="idUsuario">ID Usuario:</label>
-      <input type="number" id="idUsuario" [(ngModel)]="usuarioParaActualizar.idUsuario" name="idUsuario" disabled>
+      <input type="number" id="idUsuario" [(ngModel)]="usuarioParaActualizar.IdUsuario" name="idUsuario" disabled>
       <label for="nombre">Nombre:</label>
-      <input type="text" id="nombre" [(ngModel)]="usuarioParaActualizar.nombre" name="nombre">
+      <input type="text" id="nombre" [(ngModel)]="usuarioParaActualizar.Nombre" name="nombre">
       <label for="nombreUsuario">Nombre Usuario:</label>
-      <input type="text" id="nombreUsuario" [(ngModel)]="usuarioParaActualizar.nombreUsuario" name="nombreUsuario">
+      <input type="text" id="nombreUsuario" [(ngModel)]="usuarioParaActualizar.NombreUsuario" name="nombreUsuario">
       <label for="contrasenya">Contraseña:</label>
-      <input type="password" id="contrasenya" [(ngModel)]="usuarioParaActualizar.contrasenya" name="contrasenya">
+      <input type="password" id="contrasenya" [(ngModel)]="usuarioParaActualizar.Contrasenya" name="contrasenya">
       <label for="idRol">ID Rol:</label>
-      <input type="number" id="idRol" [(ngModel)]="usuarioParaActualizar.idRol" name="idRol">
+      <input type="number" id="idRol" [(ngModel)]="usuarioParaActualizar.IdRol" name="idRol">
       <button type="submit">Guardar</button>
     </form>
   </div>
@@ -56,13 +56,13 @@
     <h3>Agregar Usuario</h3>
     <form (ngSubmit)="agregarUsuario()">
       <label for="nombre">Nombre:</label>
-      <input type="text" id="nombre" [(ngModel)]="nuevoUsuario.nombre" name="nombre">
+      <input type="text" id="nombre" [(ngModel)]="nuevoUsuario.Nombre" name="nombre">
       <label for="nombreUsuario">Nombre Usuario:</label>
-      <input type="text" id="nombreUsuario" [(ngModel)]="nuevoUsuario.nombreUsuario" name="nombreUsuario">
+      <input type="text" id="nombreUsuario" [(ngModel)]="nuevoUsuario.NombreUsuario" name="nombreUsuario">
       <label for="contrasenya">Contraseña:</label>
-      <input type="password" id="contrasenya" [(ngModel)]="nuevoUsuario.contrasenya" name="contrasenya">
+      <input type="password" id="contrasenya" [(ngModel)]="nuevoUsuario.Contrasenya" name="contrasenya">
       <label for="idRol">ID Rol:</label>
-      <input type="number" id="idRol" [(ngModel)]="nuevoUsuario.idRol" name="idRol">
+      <input type="number" id="idRol" [(ngModel)]="nuevoUsuario.IdRol" name="idRol">
       <button type="submit">Agregar</button>
     </form>
   </div>
