--- a/ClientApp/src/app/shared/camas/camas.component.html
+++ b/ClientApp/src/app/shared/camas/camas.component.html
@@ -12,12 +12,12 @@
       </thead>
       <tbody>
         <tr *ngFor="let cama of camas">
-          <td>{{ cama.ubicacion }}</td>
-          <td>{{ cama.estado }}</td>
-          <td>{{ cama.tipo }}</td>
+          <td>{{ cama.Ubicacion }}</td>
+          <td>{{ cama.Estado }}</td>
+          <td>{{ cama.Tipo }}</td>
           <td>
             <button (click)="toggleActualizarCama(cama)">Actualizar</button>
-            <button (click)="borrarCama(cama.ubicacion)">Borrar</button>
+            <button (click)="borrarCama(cama.Ubicacion)">Borrar</button>
           </td>
         </tr>
       </tbody>
@@ -28,11 +28,11 @@
     <h3>Actualizar Cama</h3>
     <form (ngSubmit)="actualizarCama()">
       <label for="ubicacion">Ubicación:</label>
-      <input type="text" id="ubicacion" [(ngModel)]="camaParaActualizar.ubicacion" name="ubicacion" disabled>
+      <input type="text" id="ubicacion" [(ngModel)]="camaParaActualizar.Ubicacion" name="ubicacion" disabled>
       <label for="estado">Estado:</label>
-      <input type="text" id="estado" [(ngModel)]="camaParaActualizar.estado" name="estado">
+      <input type="text" id="estado" [(ngModel)]="camaParaActualizar.Estado" name="estado">
       <label for="tipo">Tipo:</label>
-      <input type="text" id="tipo" [(ngModel)]="camaParaActualizar.tipo" name="tipo">
+      <input type="text" id="tipo" [(ngModel)]="camaParaActualizar.Tipo" name="tipo">
       <button type="submit">Guardar</button>
     </form>
   </div>
@@ -41,11 +41,11 @@
     <h3>Agregar Cama</h3>
     <form (ngSubmit)="agregarCama()">
       <label for="ubicacion">Ubicación:</label>
-      <input type="text" id="ubicacion" [(ngModel)]="nuevaCama.ubicacion" name="ubicacion">
+      <input type="text" id="ubicacion" [(ngModel)]="nuevaCama.Ubicacion" name="ubicacion">
       <label for="estado">Estado:</label>
-      <input type="text" id="estado" [(ngModel)]="nuevaCama.estado" name="estado">
+      <input type="text" id="estado" [(ngModel)]="nuevaCama.Estado" name="estado">
       <label for="tipo">Tipo:</label>
-      <input type="text" id="tipo" [(ngModel)]="nuevaCama.tipo" name="tipo">
+      <input type="text" id="tipo" [(ngModel)]="nuevaCama.Tipo" name="tipo">
       <button type="submit">Agregar</button>
     </form>
   </div>
