changing naming case on shared components

--- a/ClientApp/src/app/shared/asignaciones/asignaciones.component.html
+++ b/ClientApp/src/app/shared/asignaciones/asignaciones.component.html
@@ -14,14 +14,14 @@
       </thead>
       <tbody>
         <tr *ngFor="let asignacion of asignaciones">
-          <td>{{ asignacion.idPaciente }}</td>
-          <td>{{ asignacion.ubicacion }}</td>
-          <td>{{ asignacion.fechaAsignacion | date:'dd/MM/yyyy HH:mm\'h\'' }}</td>
-          <td>{{ asignacion.fechaLiberacion ? (asignacion.fechaLiberacion | date:'dd/MM/yyyy HH:mm') : 'N/A' }}</td>
-          <td>{{ asignacion.asignadoPor }}</td>
+          <td>{{ asignacion.IdPaciente }}</td>
+          <td>{{ asignacion.Ubicacion }}</td>
+          <td>{{ asignacion.FechaAsignacion | date:'dd/MM/yyyy HH:mm\'h\'' }}</td>
+          <td>{{ asignacion.FechaLiberacion ? (asignacion.FechaLiberacion | date:'dd/MM/yyyy HH:mm') : 'N/A' }}</td>
+          <td>{{ asignacion.AsignadoPor }}</td>
           <td>
             <button (click)="toggleActualizarAsignacion(asignacion)">Actualizar</button>
-            <button (click)="borrarAsignacion(asignacion.idAsignacion)">Borrar</button>
+            <button (click)="borrarAsignacion(asignacion.IdAsignacion)">Borrar</button>
           </td>
         </tr>
         <tr *ngIf="asignacionParaActualizar">
@@ -30,19 +30,19 @@
               <h3>Actualizar Asignación</h3>
               <form (ngSubmit)="actualizarAsignacion()">
                 <label for="idPaciente">ID Paciente:</label>
-                <input type="number" id="idPaciente" [(ngModel)]="asignacionParaActualizar.idPaciente" name="idPaciente"disabled
+                <input type="number" id="idPaciente" [(ngModel)]="asignacionParaActualizar.IdPaciente" name="idPaciente"disabled
                   required>
                 <label for="ubicacion">Ubicación:</label>
-                <input type="text" id="ubicacion" [(ngModel)]="asignacionParaActualizar.ubicacion" name="ubicacion"
+                <input type="text" id="ubicacion" [(ngModel)]="asignacionParaActualizar.Ubicacion" name="ubicacion"
                   required>
                 <label for="fechaAsignacion">Fecha de Asignación:</label>
-                <input type="date" id="fechaAsignacion" [(ngModel)]="asignacionParaActualizar.fechaAsignacion"
+                <input type="date" id="fechaAsignacion" [(ngModel)]="asignacionParaActualizar.FechaAsignacion"
                   name="fechaAsignacion" required>
                 <label for="fechaLiberacion">Fecha de Liberación:</label>
-                <input type="date" id="fechaLiberacion" [(ngModel)]="asignacionParaActualizar.fechaLiberacion"
+                <input type="date" id="fechaLiberacion" [(ngModel)]="asignacionParaActualizar.FechaLiberacion"
                   name="fechaLiberacion">
                 <label for="asignadoPor">Asignado Por:</label>
-                <input type="number" id="asignadoPor" [(ngModel)]="asignacionParaActualizar.asignadoPor"
+                <input type="number" id="asignadoPor" [(ngModel)]="asignacionParaActualizar.AsignadoPor"
                   name="asignadoPor" required>
                 <button type="submit">Guardar</button>
               </form>
@@ -57,16 +57,16 @@
     <h3>Agregar Asignación</h3>
     <form (ngSubmit)="agregarAsignacion()">
       <label for="idPaciente">ID Paciente:</label>
-      <input type="number" id="idPaciente" [(ngModel)]="nuevaAsignacion.idPaciente" name="idPaciente" required>
+      <input type="number" id="idPaciente" [(ngModel)]="nuevaAsignacion.IdPaciente" name="idPaciente" required>
       <label for="ubicacion">Ubicación:</label>
-      <input type="text" id="ubicacion" [(ngModel)]="nuevaAsignacion.ubicacion" name="ubicacion" required>
+      <input type="text" id="ubicacion" [(ngModel)]="nuevaAsignacion.Ubicacion" name="ubicacion" required>
       <label for="fechaAsignacion">Fecha de Asignación:</label>
-      <input type="date" id="fechaAsignacion" [(ngModel)]="nuevaAsignacion.fechaAsignacion" name="fechaAsignacion"
+      <input type="date" id="fechaAsignacion" [(ngModel)]="nuevaAsignacion.FechaAsignacion" name="fechaAsignacion"
         required>
       <label for="fechaLiberacion">Fecha de Liberación:</label>
-      <input type="date" id="fechaLiberacion" [(ngModel)]="nuevaAsignacion.fechaLiberacion" name="fechaLiberacion">
+      <input type="date" id="fechaLiberacion" [(ngModel)]="nuevaAsignacion.FechaLiberacion" name="fechaLiberacion">
       <label for="asignadoPor">Asignado Por:</label>
-      <input type="number" id="asignadoPor" [(ngModel)]="nuevaAsignacion.asignadoPor" name="asignadoPor" required>
+      <input type="number" id="asignadoPor" [(ngModel)]="nuevaAsignacion.AsignadoPor" name="asignadoPor" required>
       <button type="submit">Agregar</button>
     </form>
   </div>
