petición de Alex

--- a/ClientApp/src/app/administrativo/pages/administrativo-dashboard/administrativo-dashboard.component.html
+++ b/ClientApp/src/app/administrativo/pages/administrativo-dashboard/administrativo-dashboard.component.html
@@ -11,6 +11,7 @@
       <li><a routerLink="notificaciones" routerLinkActive="active" title="Ver notificaciones sobre consultas, citas, y más">Notificaciones</a></li>
       <li><a routerLink="documentos-paciente" routerLinkActive="active" title="Gestión de documentos importantes del paciente">Documentos del Paciente</a></li>
       <li><a routerLink="reportes" routerLinkActive="active" title="Generar y descargar reportes">Reportes</a></li>
+      <li><a routerLink="camas" routerLinkActive="active" title="Generar y descargar reportes">Reportes</a></li>
     </ul>
   </aside>
   
